# owlde-demo-icfp2019

./: .gitignore  Animated N-Body integration.ipynb  README.md  Simple Jupyter Notebook + Juplot demo.ipynb  chart.xkcd.min.js  dune-project  preypredator.bc.js
jupyter/: Animated N-Body integration.ipynb  Simple Jupyter Notebook + Juplot demo.ipynb
minibench/: dune  minibench.ml  minibench.py
opam-switches/: owlde-demo-base  owlde-demo-flambda
planets/: bench.ml  bench.py  bench_numpy.py  bench_pure.ml  bench_pure.py  dune  jovianplanets.ml  jovianplanets.py  plot.ml
planets_simulation/: .merlin  dune  jovianplanets.ml  nbody.ml
src/: .merlin  dune  index.html  preypredator.ml
teaching_material/: chart.xkcd.js  chart.xkcd.min.js  dune  index.html  plot_bindings.ml  preypredator.ml
