(library
 (name jovianplanets)
 (modules jovianplanets)
 (libraries owl owl-ode))

(executables
 (names bench plot)
 (modules bench plot)
 (libraries owl owl-ode jovianplanets owl-plplot))

(executable
 (name bench_pure)
 (modules bench_pure)
 (libraries jovianplanets))

(alias
 (name examples)
 (deps bench_pure.exe bench.exe plot.exe))
